crates/check_js_type_info/tests/snapshots/infer_type_of_identifier.snap
---
source: crates/check_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
foo;

```

## Result

```
unresolved reference "foo" (scope ID: 0)
```
