crates/check_js_type_info/tests/snapshots/infer_type_of_object_member_expression.snap
---
source: crates/check_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
foo.bar;

```

## Result

```
unresolved reference "foo" (scope ID: 0).bar
```
