crates/check_js_type_info/tests/snapshots/infer_type_of_typeof_expression.snap
---
source: crates/check_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
typeof foo;

```

## Result

```
typeof unresolved reference "foo" (scope ID: 0)
```
